fix,docs: fix scroll/clean buttons visibility when automatic highlighting is enabled. Improve english grammar of manual-checklist.md

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -218,7 +218,7 @@ button:active {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .backgroundGray {
